SF Primes/src/objects/Discovery_Workbook_Category__c.object
<CustomObject>
    <description>Contains the Workbook capturing questions, responses, interviewees, interviewers; and associated with a Project and Site.</description>
    <fields>
        <fullName>Contact_Being_Interviewed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Being Interviewed</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Discovery_Workbook_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_of_Questions__c</fullName>
        <label>Count of Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Discovery_Workbook_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_of_Discovery_Answer_Wkbk_Categories__c</fullName>
        <label>No of Discovery Answer Wkbk Categories</label>
        <summaryFilterItems>
            <field>Discovery_Answer_Workbook_Category__c.Answer_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Discovery_Answer_Workbook_Category__c.Discovery_Workbook_Category__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Questions__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>IF(Count_of_Questions__c &gt; 0, No_of_Discovery_Answer_Wkbk_Categories__c/Count_of_Questions__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Question_Category__c</fullName>
        <label>Question Category</label>
        <referenceTo>Question_Category__c</referenceTo>
        <relationshipName>Discovery_Workbook_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Site_Workbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Workbook</label>
        <lookupFilter>
            <active>false</active>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Site_Workbook__c</referenceTo>
        <relationshipLabel>Discovery Site Workbook Categories</relationshipLabel>
        <relationshipName>Discovery_Workbook</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Discovery Site Workbook Categories</relationshipLabel>
        <relationshipName>Discovery_Site_Workbook_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Discovery Site Workbook Category</label>
    <nameField>
        <displayFormat>DW-{00000}</displayFormat>
        <label>Discovery Workbook Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Site Workbook Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>